# chemvision-skill

./: .env.example  .gitignore  README.md  SKILL.md  info.json  manage.py  meta.json  pyproject.toml  requirements.txt
chemskill/: __init__.py  agent.py  config.py  server.py
chemskill/prompts/: system.txt  tool_guidance.txt
chemskill/static/: katex.min.css  render.html  smiles-drawer.js
chemskill/tools/: name_resolver.py  ocr_recognizer.py  reaction_predict.py  registry.py  safety_lookup.py  smiles_inspector.py
chemskill/utils/: opsin_client.py  pubchem_client.py  smiles_utils.py  svg_renderer.py
demo/: demo_api.py  demo_cli.py
skill_manifest/: examples.json  manifest.json  openapi.json  skill.json  skill.yaml  tools_schema.json
skill_pool/: skill.json
skill_pool/chemvision/: SKILL.md
tests/: test_agent.py  test_e2e.py  test_tools.py
