[project]
name = "chemvision-skill"
version = "3.0.0"
description = "ChemVision Agent Skill — 化学数据查询工具服务（PubChem + OPSIN），供 Agent 调用"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "ChemVision Team"},
]
keywords = ["chemistry", "agent", "skill", "pubchem", "aipc", "tool-calling"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Chemistry",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
chemskill = "chemskill.server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.ruff]
line-length = 100
target-version = "py310"
